[package]
name = "rapier-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { version = "0.17.1" }
glam = { version = "0.21.3" }
nalgebra = { version = "0.32.1", features = ["convert-glam021"] }